--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,7 @@
-body {
+body, html {
     font: 14px "Century Gothic", Futura, sans-serif;
-    margin: 20px;
+    height: 100%;
+    margin: 0;
 }
 
 ol,
@@ -73,4 +74,5 @@ ul {
     color: black;
   } */
 /**/
+
 
